[package]
name = "iatjc-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
windows-core = "0.56.0"
tracing = "0.1"
tracing-subscriber = "0.1"
anyhow = "1.0.86"

[dependencies.windows]
version = "0.56.0"
features = [
    "implement",
    "Win32_System_Com",
    "Win32_UI_Input_Ime",
    "Win32_UI_TextServices",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_DataExchange",
    "Win32_UI_WindowsAndMessaging",
    "Foundation_Numerics",
    "UI",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_SystemServices",
    "Win32_System_Registry",
    "Win32_System_Variant",
    "Win32_System_WindowsProgramming",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi"
]